# Adashi

./: .gitattributes  .gitignore  LICENSE  README.md  agents.md  elevator_pitch.md  index.html  package-lock.json  package.json
public/structurizr/: viewer.html
public/structurizr/js/: dagre.js  graphlib.js
src/: MockupEditor.tsx  main.tsx  mockupEditorModel.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: design.rs  fixed_hooks.rs  lib.rs  main.rs  mcp.rs  memory.rs  mockups.rs  qa.rs  rules.rs  schema.rs  schema.sql  seed.rs  settings.rs  state.rs  tasks.rs
