[package]
name = "adashi"
version = "0.1.0"
description = "Senior agent dashboard"
authors = ["Adashi"]
edition = "2021"

[lib]
name = "adashi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rmcp = { version = "2.1.0", features = ["server", "transport-io"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
